fix some small screen size text wrapping, header brand sizing

--- a/app/styles/media-queries.scss
+++ b/app/styles/media-queries.scss
@@ -365,6 +365,9 @@ responsive
 }
 
 @media (max-width: 480px) {
+	.navbar-default h1 a.navbar-brand {
+		font-size:25px;
+	}
 	.btn {
 	  width:100%;
 	  margin:0 0 15px 0;
